Updated font family Updated row width

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,5 +1,7 @@
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,700);
 @import "settings";
 @import "foundation";
+@import "fuckupnight";
 
 // Or selectively include components
 // @import
@@ -38,3 +40,5 @@
 //   "foundation/components/type",
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
+
+
