--- a/scss/_fuckupnight.scss
+++ b/scss/_fuckupnight.scss
@@ -1,3 +1,29 @@
+
 .row {
   max-width: 100%;
+}
+
+.content{
+  background-color: $white;
+  box-shadow: 3px 3px 9px -7px black, -3px 3px 9px -7px black;
+
+  .content-area{
+    @media #{$small-up} {
+      padding: $padding;
+    }
+  }
+}
+
+// Sidebars
+.sidebar{
+  .termine{
+    .termin-item{
+      .date{
+        font-weight: bold;
+      }
+    }
+  }
+  .termine, .partner{
+    margin-bottom: 2*$padding;
+  }
 }
