Added logo and topbar

--- a/scss/_fuckupnight.scss
+++ b/scss/_fuckupnight.scss
@@ -1,3 +1,11 @@
 .row {
   max-width: 100%;
 }
+
+#logo span {
+  position: absolute;
+  bottom: 12%;
+  left: 15%;
+  color: black;
+  width: 47.5%
+}
