--- a/scss/_fuckupnight.scss
+++ b/scss/_fuckupnight.scss
@@ -41,5 +41,26 @@
   }
 }
 
-
 img[src*=svg] { width/*\**/: 100%;}
+
+.failure-big {
+  right: 0;
+  color: white;
+  width: 75%;
+  position: absolute;
+  background: $fuckupred;
+  border: $fuckupred 5px solid;
+  margin-top: 2em;
+  margin-right: -1em;
+}
+
+.failure-small {
+  right: 0;
+  color: white;
+  //width: 100% + 2em;
+  position: absolute;
+  background: $fuckupred;
+  border: $fuckupred 5px solid;
+  margin-top: 1em;
+  margin-left: -1em;
+}
