Added sample article

--- a/scss/_fuckupnight.scss
+++ b/scss/_fuckupnight.scss
@@ -64,7 +64,7 @@ img[src*=svg] { width/*\**/: 100%;}
   margin-left: -1em;
 }
 
-div.article h2 {
+div.article h2,h3,h4,h5 {
   color: $fuckupred;
 }
 
