--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -202,7 +202,7 @@ $body-bg: $bg-grau;
 // $header-font-family: $body-font-family;
 // $header-font-weight: $font-weight-normal;
 // $header-font-style: normal;
-// $header-font-color: $jet;
+$header-font-color: $fuckupred;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
 // $header-bottom-margin: .5rem;
@@ -259,8 +259,8 @@ $body-bg: $bg-grau;
 // We use these to style anchors
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
-// $anchor-font-color: $primary-color;
-// $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+$anchor-font-color: $fuckupred;
+$anchor-font-color-hover: scale-color($fuckupred, $lightness: -14%);
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
@@ -1377,7 +1377,7 @@ $topbar-bg: $topbar-bg-color;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-$topbar-dropdown-bg: $white;
+$topbar-dropdown-bg: $bg-grau;
 // $topbar-dropdown-link-color: $white;
 $topbar-dropdown-link-bg: $aluminum;
 // $topbar-dropdown-link-weight: $font-weight-normal;
