--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,6 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400,700);
 @import "settings";
 @import "foundation";
+// change $fi-path inside foundation-icons.scss to:
+// $fi-path: "../bower_components/foundation-icon-fonts" !default;
+@import "../bower_components/foundation-icon-fonts/foundation-icons";
 @import "fuckupnight";
 
 
