--- a/scss/_fuckupnight.scss
+++ b/scss/_fuckupnight.scss
@@ -36,7 +36,7 @@ header {
     @media #{$medium-up} {
       margin-left: 1rem;
     }
-    img{ max-width: 340px; }
+    img{ max-width: 300px; }
   }
 }
 
@@ -60,9 +60,12 @@ img[src*=svg] { width/*\**/: 100%;}
   width: 85%;
   background: $fuckupred;
   border: $fuckupred 5px solid;
-  margin-top: 4em;
-  margin-right: -1em;
+  margin-top: 3em;
+  margin-right: -.9375rem;
   float: right;
+  font-size: 1.2rem;
+  line-height: 100%;
+  font-weight: 100;
 }
 
 .failure-small {
